# template-church

./: .cursorrules  .gitignore  README.md  pyproject.toml  requierments.txt  settings.json
backend/: check_settings.py  check_urls.py  verify_fix.py
backend/api/: permissions.py  tests_tech.py  urls.py
backend/api/migrations/: 0001_initial.py  0002_contact_subscriber_blog_blogsection_comment_gallery_and_more.py  0003_churchgroup_can_manage_blog_and_more.py  0004_remove_churchgroup_can_manage_blog_and_more.py  0005_rename_can_manage_finances_groupmembership_can_manage_videos.py  0006_mediablog_remove_blogsection_image_and_more.py
backend/api/models/: __init__.py  blog_model.py  comment_model.py  contact_model.py  finance_models.py  gallery_model.py  groups_models.py  media_models.py  members_models.py  subscriber.py  video_model.py
backend/api/serializers/: __init__.py  blog_serializers.py  church_group_serializers.py  finance_record_serializer.py  gallery_serializers.py  interaction_serializers.py  media_serializer.py  member_serializers.py  video_serializers.py
backend/api/views/: __init__.py  blog_views.py  church_group_views.py  finance_record_views.py  gallery_views.py  interaction_views.py  media_views.py  membership_views.py  (+1 more)
backend/backend/: settings.py  urls.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
public_html/: index.html
public_html/assets/: index-DZqpdUKq.js  index-PURodVHw.js  index-jERnhBvt.css
(+55 files in other folders)
